--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -15,15 +15,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-haskell@v1
+    - uses: actions/checkout@5a4ac9002d0be2fb38bd78e4b4dbde5606d7042f
+    - uses: actions/setup-haskell@048c29979717135f04282c42c2186bb5945b2d8f
       with:
         ghc-version: '9.0.1'
         cabal-version: '3.4'
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@5a4ac9002d0be2fb38bd78e4b4dbde5606d7042f
 
     - name: Cache
-      uses: actions/cache@v1
+      uses: actions/cache@70655ec8323daeeaa7ef06d7c56e1b9191396cbe
       env:
         cache-name: cache-cabal
       with:
@@ -34,18 +34,18 @@ jobs:
           ${{ runner.os }}-build-
           ${{ runner.os }}-
     - name: Install Ninja
-      uses: llvm/actions/install-ninja@main
-    - uses: actions/checkout@v1
+      uses: llvm/actions/install-ninja@50fbc622fc4ef5163becd7fab6573eac35f8462e
+    - uses: actions/checkout@5a4ac9002d0be2fb38bd78e4b4dbde5606d7042f
       with:
         fetch-depth: 1
     - name: Clone LLVM repo
-      uses: actions/checkout@v2
+      uses: actions/checkout@5a4ac9002d0be2fb38bd78e4b4dbde5606d7042f
       with:
         repository: llvm/llvm-project
         ref: 'main'
         path: 'llvm_src'
     - name: Ccache for C++ compilation
-      uses: hendrikmuhs/ccache-action@v1.0.4
+      uses: hendrikmuhs/ccache-action@4687d037e4d7cf725512d9b819137a3af34d39b3
     - name: Install dependencies (Haskell)
       run: |
         cabal update
