--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,30 +11,27 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout the repository
       uses: actions/checkout@5a4ac9002d0be2fb38bd78e4b4dbde5606d7042f
 
-    - name: Install GHC & Cabal
-      uses: actions/setup-haskell@048c29979717135f04282c42c2186bb5945b2d8f
+    - name: Setup Haskell Stack
+      uses: actions/setup-haskell@v1
       with:
-        ghc-version: '9.0.1'
-        cabal-version: '3.4'
+        enable-stack: true
+        stack-no-global: true
+        stack-version: 'latest'
 
     - name: Cache
       uses: actions/cache@70655ec8323daeeaa7ef06d7c56e1b9191396cbe
-      env:
-        cache-name: cache-cabal
       with:
-        path: ~/.cabal
-        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/*.cabal') }}-${{ hashFiles('**/cabal.project') }}
-        restore-keys: |
-          ${{ runner.os }}-build-${{ env.cache-name }}-
-          ${{ runner.os }}-build-
-          ${{ runner.os }}-
+        path: |
+          ~/.stack
+          $GITHUB_WORKSPACE/.stack-work
+        key: ${{ runner.os }}-${{ hashFiles('**/*.cabal', 'stack*.yaml') }}
+        restore-keys: ${{ runner.os }}-
 
     - name: Install Ninja
       uses: llvm/actions/install-ninja@55d844821959226fab4911f96f37071c1d4c3268
@@ -51,8 +48,7 @@ jobs:
 
     - name: Install dependencies (Haskell)
       run: |
-        cabal update
-        cabal build --only-dependencies --enable-tests --enable-benchmarks
+        stack build --test --only-dependencies
 
     - name: Install dependencies (LLVM & MLIR)
       run: |
@@ -70,9 +66,9 @@ jobs:
     - name: Build mlir-hs
       run: |
         export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$HOME/mlir_shared/lib
-        cabal build --enable-tests --enable-benchmarks all
+        stack build --test --ghc-options "-Wall -Werror -fforce-recomp"
 
     - name: Run mlir-hs tests
       run: |
         export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$HOME/mlir_shared/lib
-        cabal test all
+        stack test
