Improve caching in Haskell CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,9 @@ jobs:
       env:
         cache-name: cache-cabal
       with:
-        path: ~/.cabal
+        path: |
+          ~/.cabal/store
+          dist-newstyle
         key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/*.cabal') }}-${{ hashFiles('**/cabal.project') }}
         restore-keys: |
           ${{ runner.os }}-build-${{ env.cache-name }}-
