--- a/mlir-hs.cabal
+++ b/mlir-hs.cabal
@@ -58,6 +58,7 @@ library
       MLIR.AST
     , MLIR.AST.Builder
     , MLIR.AST.Dialect.Affine
+    , MLIR.AST.Dialect.LLVM
     , MLIR.AST.Dialect.Linalg
     , MLIR.AST.Dialect.MemRef
     , MLIR.AST.Dialect.Shape
