--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -44,10 +44,10 @@ jobs:
     - name: Install dependencies (LLVM & MLIR)
       run: |
         export PATH="/usr/lib/ccache:/usr/local/opt/ccache/libexec:$PATH"
-        cmake -S llvm_src/llvm -B llvm_src/build -DLLVM_CCACHE_BUILD=ON -DLLVM_ENABLE_PROJECTS=mlir \
-          -DLLVM_TARGETS_TO_BUILD="host" -DLLVM_BUILD_LLVM_DYLIB=ON -DCMAKE_BUILD_TYPE=Release \
-          -DLLVM_BUILD_EXAMPLES=OFF -DCMAKE_INSTALL_PREFIX=$HOME/mlir_shared
-        cd llvm_src/build && ninja -j4 install
+        cmake -B llvm_src/build -DLLVM_CCACHE_BUILD=ON \
+          -DLLVM_BUILD_LLVM_DYLIB=ON -DCMAKE_BUILD_TYPE=Release \
+          -DCMAKE_INSTALL_PREFIX=$HOME/mlir_shared
+        cd llvm_src/build && ninja -j4 install llvm_src/llvm/install
         echo "$HOME/mlir_shared/bin" >> $GITHUB_PATH
       env:
         CC: clang
