Update install path in cmake file
Enable following the instructions in the readme file more directly.

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ stack.yaml.lock
 # Generated files
 src/MLIR/AST/Dialect/Generated
 test/MLIR/AST/Dialect/Generated
+# LLVM src checkout dir
+llvm-project
