Update std dialect usage post arith dialect split

--- a/mlir-hs.cabal
+++ b/mlir-hs.cabal
@@ -58,6 +58,7 @@ library
       MLIR.AST
     , MLIR.AST.Builder
     , MLIR.AST.Dialect.Affine
+    , MLIR.AST.Dialect.Arith
     , MLIR.AST.Dialect.LLVM
     , MLIR.AST.Dialect.Linalg
     , MLIR.AST.Dialect.MemRef
@@ -75,7 +76,8 @@ library
     , MLIR.Native.FFI
     , MLIR.Native.Pass
   other-modules:
-      MLIR.AST.Dialect.Generated.LLVM
+      MLIR.AST.Dialect.Generated.Arith
+    , MLIR.AST.Dialect.Generated.LLVM
     , MLIR.AST.Dialect.Generated.Linalg
     , MLIR.AST.Dialect.Generated.LinalgStructured
     , MLIR.AST.Dialect.Generated.Shape
