--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,8 +52,8 @@ jobs:
         export PATH="/usr/lib/ccache:/usr/local/opt/ccache/libexec:$PATH"
         cmake -B llvm-project/build -DLLVM_CCACHE_BUILD=ON \
           -DLLVM_BUILD_LLVM_DYLIB=ON -DCMAKE_BUILD_TYPE=Release \
-          -DCMAKE_INSTALL_PREFIX=$HOME/mlir_shared
-        cd llvm-project/build && ninja -j4 install llvm-project/llvm/install
+          -DCMAKE_INSTALL_PREFIX=$HOME/mlir_shared llvm-project/llvm
+        cd llvm-project/build && ninja -j4 install
         echo "$HOME/mlir_shared/bin" >> $GITHUB_PATH
       env:
         CC: clang
