--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,7 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+    types: [ opened, synchronize ]
   schedule:
     # Always regenerate once every 4 hour
     - cron:  '15 */4 * * *'
