--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
         stack-version: 'latest'
 
     - name: Cache .stack-work
-      uses: actions/cache@704facf57e6136b1bc63b828d79edcd491f0ee84 # v3.3.2
+      uses: actions/cache@v4
       with:
         path: .stack-work
         key: stack-work-${{ runner.os }}-${{ hashFiles('stack.yaml', '**/*.cabal') }}-${{ hashFiles('src/*', 'tblgen/*', 'test/*') }}
@@ -37,7 +37,7 @@ jobs:
           stack-work-${{ runner.os }}-
 
     - name: Cache ~/.stack
-      uses: actions/cache@704facf57e6136b1bc63b828d79edcd491f0ee84 # v3.3.2
+      uses: actions/cache@v4
       with:
         path: ${{ steps.setup-haskell.outputs.stack-root }}
         key: stack-root-${{ runner.os }}-${{ hashFiles('stack.yaml', '**/*.cabal') }}
